Implement multi-search feature.